--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,7 @@
-book_filename: “Longitudinal”
+book_filename: “Applied Longitudinal Data Analysis”
 chapter_name: "Chapter "
 repo: https://github.com/josh-jackson/longitudinal
 output_dir: docs
 rmd_files: ["index.Rmd", "01-Syllabus.Rmd", "02-LDA-class-outline.Rmd", "03-Growth-curves.Rmd"]
+clean: [packages.bib, book down.bbl]
+new_session: yes
