--- a/_output.yml
+++ b/_output.yml
@@ -9,6 +9,8 @@ bookdown::gitbook:
       after: |
         <li>Applied Longitudinal Data Analysis</li>
 bookdown::pdf_book:
+  includes:
+    in_header: preamble.tex
   latex_engine: xelatex
   citation_package: natbib
 bookdown::epub_book:
