--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: “Applied Longitudinal Data Analysis”
+book_filename: Applied Longitudinal Data Analysis
 chapter_name: "Chapter "
 repo: https://github.com/josh-jackson/longitudinal
 output_dir: docs
